--- a/Back/package.json
+++ b/Back/package.json
@@ -4,7 +4,8 @@
     "argon2": "^0.44.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "name": "back",
   "version": "1.0.0",
