--- a/Front/ChangaYa-App/package.json
+++ b/Front/ChangaYa-App/package.json
@@ -39,7 +39,8 @@
     "react-native-svg": "^15.13.0",
     "react-native-svg-transformer": "^1.5.1",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "@react-native-async-storage/async-storage": "2.2.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
